# matrix-pinger-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
src/: main.rs
